# pre-commit-cpp

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini  travis.yml
pre_commit_cpp/: clang_format_hook.py
testing/: .pre-commit-config-test.yaml
tests/: clang_format_hook_test.py  test_pre_commit.sh
