[metadata]
name = pre_commit_cpp
version = 0.1.0

[options]
packages = find:
install_requires =
  packaging

[options.entry_points]
console_scripts =
    clang-format-hooks = pre_commit_cpp.clang_format_hook:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
