[metadata]
name = pre_commit_cpp
version = 0.1.0
author = Guihao Liang
author_email = izana0910@gmail.com
description = Pre-commit hooks for C/C++
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guihao-liang/pre-commit-cpp
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy


[options]
packages = find:
install_requires =
  packaging

[options.entry_points]
console_scripts =
    clang-format-hook = pre_commit_cpp.clang_format_hook:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
